# money-management

./: .gitignore  README.md  package.json  pnpm-lock.yaml
resources/: Money Management.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/modules/common/: Cargo.toml
src-tauri/modules/common/config/: sample.toml
src-tauri/modules/common/entities/: category.rs  invoice.rs  mod.rs  paymeny_method.rs  prelude.rs  users.rs
src-tauri/modules/common/src/: lib.rs
src-tauri/modules/common/src/collections/: mod.rs  user_collection.rs
src-tauri/modules/common/src/entities/: investment.rs  item.rs  mod.rs  payment_method.rs  prelude.rs  role.rs  users.rs
src-tauri/modules/common/src/repository/: impl_traits.rs  mod.rs  traits.rs
src-tauri/modules/common/src/repository/impl_traits/: users_repository.rs
src-tauri/modules/common/src/repository/traits/: category_trait.rs  generic_trait.rs  investment_trait.rs  invoice_trait.rs  item_trait.rs  payment_method_trait.rs  role_trait.rs  users_trait.rs
src-tauri/modules/common/src/request/: mod.rs  users_request.rs
src-tauri/modules/common/src/shared/: app_error.rs  constants.rs  context.rs  mod.rs  settings.rs
src-tauri/modules/common/src/use_cases/: user_usecase.rs
src-tauri/src/: main.rs
