[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
derive-getters = "0.2.0"
derive-new = "0.5.8"
anyhow = "1.0.53"
serde = { version = "1.0.126", features = ["derive"] }
config-file = "0.2.3"
async-trait = "0.1.60"
chrono = "0.4.23"
